# Taideteos

./: .gitignore  LICENSE  README.md
backend/: .env.example  main.py  pyproject.toml
backend/api/v1/: comments.py  edges.py  graphs.py  nodes.py  users.py
backend/core/: config.py  security.py
backend/crud/: comment_crud.py  edge_crud.py  graph_crud.py  node_crud.py  progress_crud.py  rating_crud.py  user_crud.py
backend/db/: session.py
backend/models/: graph_model.py  user_model.py
backend/schemas/: comment_schema.py  graph_base_schemas.py  graph_schema.py  progress_schema.py  user_base_schemas.py  user_schema.py
frontend/: index.html
frontend/js/: api.js  auth.js  main.js  router.js
frontend/pages/: create_graph.html  edit_graph.html  edit_node.html  graphs.html  home.html  login.html  not_found.html  profile.html  register.html  view_graph.html  view_node.html
